--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 		<div class="el1">
 			<h3 id="friends">Friends</h3>
 			<div class="el2">
-				<form action="" method="GET">
-					<h3 id="name">Your Name</h3><br>
+				<form action="friends.php" method="post">
+					<h3 id="name">Enter Your Name</h3><br>
 					<input type="text" name="lname" id="lname"><br>
 					<h3 id="h32">Say <span>something</span> <span style="color: rgb(248, 58, 58);">About Friends</span></h3>
-					<input type="text" name="friends" id="infriends"><br><br>
+					<textarea name="friends" id="infriends"></textarea><br><br>
 					<input type="submit" value="SUBMIT" id="submit"><br><br>
 				</form>
 				<footer>&copy2020 Wilson Mobisa</footer>
