updating friends backend

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 			<div class="el2">
 				<form action="friends.php" method="post">
 					<h3 id="name">Enter Your Name</h3><br>
-					<input type="text" name="lname" id="lname"><br>
+					<input type="text" name="uname" id="name"><br>
 					<h3 id="h32">Say <span>something</span> <span style="color: rgb(248, 58, 58);">About Friends</span></h3>
 					<textarea name="friends" id="infriends"></textarea><br><br>
-					<input type="submit" value="SUBMIT" id="submit"><br><br>
+					<input type="submit" value="SUBMIT" id="submit" style="cursor: pointer;"><br><br>
 				</form>
 				<footer>&copy2020 Wilson Mobisa</footer>
 			</div>
