changed "uname" to "fullname"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="el2">
 				<form action="friends.php" method="post">
 					<h3 id="name">Enter Your Name</h3><br>
-					<input type="text" name="uname" id="name"><br>
+					<input type="text" name="fullname" id="name"><br>
 					<h3 id="h32">Say <span>something</span> <span style="color: rgb(248, 58, 58);">About Friends</span></h3>
 					<textarea name="friends" id="infriends"></textarea><br><br>
 					<input type="submit" value="SUBMIT" id="submit" style="cursor: pointer;"><br><br>
